[tool.poetry]
name = "guestbook"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
sqlalchemy = "^2.0.2"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
